kubernetes/apps/networking/authentik/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    #external-dns/is-public: "true"
    external-dns.home.arpa/enabled: "false"
    # external-dns.alpha.kubernetes.io/target: "${SECRET_DOMAIN}"
    # external-dns.alpha.kubernetes.io/hostname: auth.${SECRET_DOMAIN}
    hajimari.io/enable: "true"
    hajimari.io/icon: mdi:account-security-outline
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
  name: authentik
  namespace: networking
spec:
  ingressClassName: "traefik"
  rules:
    - host: "authentik.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: authentik
                port:
                  number: 80
    - host: "*.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /outpost.goauthentik.io/
            pathType: Prefix
            backend:
              service:
                name: authentik
                port:
                  number: 80
  tls:
    - hosts:
        - authentik.${SECRET_DOMAIN}
      secretName: authentik-${SECRET_DOMAIN}-tls
# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: authentik
#   namespace: networking
#   annotations:
#     cert-manager.io/cluster-issuer: "letsencrypt-production"
#     #cert-manager.io/cluster-issuer: "ca-issuer"
#     traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
#     #traefik.ingress.kubernetes.io/router.middlewares: networking-middlewares-authentik@kubernetescrd
#     #traefik.ingress.kubernetes.io/router.middlewares: networking-traefik-middlewares-authentik@kubernetescrd
# spec:
#   ingressClassName: "traefik"
#   tls:
#     - hosts:
#         - "authentik.${SECRET_DOMAIN}"
#       secretName: "authentik-tls"
#   rules:
#     - host: "authentik.${SECRET_DOMAIN}"
#       http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: authentik
#                 port:
#                   number: 80
